feat: db changes, new apis
